o Build updates. o Replaced ${pom.*} with ${project.*}. o Corrected test cases of jdtaus-core-client-container artifact. o Updated to 1.10-SNAPSHOT.
git-svn-id: http://svn.jdtaus.org/svnroot/jdtaus/jdtaus-core/branches/jdtaus-core-1.x@8308 d3f52c91-230f-0410-802c-e3ec080d4bae