@@ -26,7 +26,7 @@
   <parent>
     <artifactId>jdtaus-core</artifactId>
     <groupId>org.jdtaus</groupId>
-    <version>1.9.2-SNAPSHOT</version>
+    <version>1.10-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>jdtaus-core-client-container</artifactId>
@@ -84,20 +84,6 @@
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>javacc-maven-plugin</artifactId>
       </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <forkMode>never</forkMode>
-          <skip>false</skip>
-          <systemProperties>
-            <property>
-              <name>java.util.logging.config.file</name>
-              <value>${project.build.testOutputDirectory}/logging.properties</value>
-            </property>
-          </systemProperties>
-        </configuration>
-      </plugin>
     </plugins>
   </build>
   <reporting>
@@ -115,17 +101,60 @@
       <activation>
         <jdk>1.4</jdk>
       </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-dependency-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>copy-extensions</id>
+                <phase>process-test-resources</phase>
+                <goals>
+                  <goal>copy</goal>
+                </goals>
+                <configuration>
+                  <artifactItems>
+                    <artifactItem>
+                      <groupId>javax.xml.parsers</groupId>
+                      <artifactId>jaxp-api</artifactId>
+                      <version>1.4.2</version>
+                    </artifactItem>
+                    <artifactItem>
+                      <groupId>com.sun.xml.parsers</groupId>
+                      <artifactId>jaxp-ri</artifactId>
+                      <version>1.4.2</version>
+                    </artifactItem>
+                  </artifactItems>
+                  <outputDirectory>${project.build.directory}/endorsed</outputDirectory>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <argLine>-Djava.endorsed.dirs="${project.build.directory}/endorsed" -Djava.ext.dirs="${project.build.directory}/endorsed"</argLine>
+              <systemProperties>
+                <property>
+                  <name>java.util.logging.config.file</name>
+                  <value>${project.build.testOutputDirectory}/logging.properties</value>
+                </property>
+              </systemProperties>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
       <dependencies>
         <dependency>
           <groupId>javax.xml.parsers</groupId>
           <artifactId>jaxp-api</artifactId>
-          <version>1.4.2</version>
           <scope>compile</scope>
         </dependency>
         <dependency>
           <groupId>com.sun.xml.parsers</groupId>
           <artifactId>jaxp-ri</artifactId>
-          <version>1.4.2</version>
           <scope>runtime</scope>
         </dependency>
       </dependencies>
